# Chat-server

./: .clang-format  .env  .gitignore  CMakeLists.txt  Dockerfile  README.md  autobuild.sh  build.bat  build.sh  client.sh  docker-compose.yml  example.env  server.sh  vcpkg.json  vcpkg_install.bat  vcpkg_install.sh
script/: vcpkg_install.bat  vcpkg_install.sh
src/: CMakeLists.txt  main.cpp
src/auth/: CMakeLists.txt  main.cpp
src/client/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  main.cpp
